# tembo-packaging

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: lint.yaml  repackage.yaml  shellcheck.yaml  tembox.yaml
control/: libjson-c  libjson-c5
crates/tembox/: Cargo.toml
crates/tembox/src/: main.rs
crates/trunk-dependencies/: Cargo.toml  README.md
crates/trunk-dependencies/src/: dependencies.rs  main.rs  trunk.rs  unpack.rs
crates/trunk-dependencies/src/trunk/: types.rs
crates/ubuntu-contents/: Cargo.toml  README.md
crates/ubuntu-contents/src/: main.rs
src/: archive.rs  digest.rs  main.rs
