[package]
name = "tembox"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.1.1"
fs-err = "3.1.0"
hex = "0.4.3"
hmac-sha512 = { version = "1.1.6", features = ["opt_size"] }
log = "0.4.27"
tar = "0.4.44"
ureq = "3.0.10"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
