[package]
name = "tembox"
description = "Simple package manager for Tembo Cloud"
version = "0.1.2"
edition = "2024"

[dependencies]
flate2 = "1.1.1"
log = "0.4.27"
tar = "0.4.44"
tempfile = "3.19.1"
ureq = "3.0.10"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
